--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A response builder for AWS Proxy type of response",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test:unit",
-    "test:unit": "mocha --opts ./test/mocha.opts ./tests/unit/index.js"
+    "test": "npm run test:lint && npm run test:unit",
+    "test:unit": "mocha --opts ./test/mocha.opts ./tests/unit/index.js",
+    "test:lint": "eslint ."
   },
   "repository": {
     "type": "git",
